--- a/frontend/src/components/Grafo.css
+++ b/frontend/src/components/Grafo.css
@@ -35,8 +35,8 @@
 .grafos-graph-placeholder {
   background-color: #f0f0f0;
   border-radius: 8px;
-  height: calc(100% - 40px);
-  min-height: 200px;
+  height: 400px ;
+
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,6 +44,7 @@
 
 .grafos-placeholder-content {
   text-align: center;
+
 }
 
 .grafos-placeholder-icon {
